--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,32 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+ 
+//  each key has its own assigned value so we are adding the below function to the event listener of keydown and the value of keyCode is utilized as they data-key attribute
+  const playSound = function (e) {
+      // Want to know whether there is a data-key that matches the keydown event.keyCode
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+      if (!audio) return; // This will just stop the function from running altogether
+      audio.currentTime = 0; // rewind it to the start
+      audio.play();
+      key.classList.add('playing');
+      // need the animation to go back to normal
+    }
+      
+
+  const removeTransition = function (e) {
+    if(e.propertyName !== 'transform') return; // this is saying to skip if it is not transform
+    this.classList.remove('playing')
+    
+  }
+  const keys = document.querySelectorAll('.key');
+  // Need to utilize forEach because as an array (which a node is essentially) you cannot listen to all of them, you must attache the listen event to each of them
+  keys.forEach(key => {
+    key.addEventListener('transitionend', removeTransition)
+  })
+
+  document.addEventListener('keydown', playSound)
 
 </script>
 
